--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,9 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
-    "mysql2": "^3.16.0"
+    "multer": "^2.0.2",
+    "mysql2": "^3.16.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "prisma": "^6.19.1"
